# KaeruEngine

./: CMakeLists.txt  README.md
KaeruEngine/: CMakeLists.txt
KaeruEngine/src/: Kaeru.h  test.cpp  test.h
KaeruEngine/src/Kaeru/: Application.cpp  Application.h  Core.h  EntryPoint.h
KaeruEngine/src/Kaeru/logging/: LogDestination.cpp  LogDestination.h  LogMessage.cpp  LogMessage.h  LogQueue.cpp  LogQueue.h  LogWorker.cpp  LogWorker.h  Logger.cpp  Logger.h
KaeruSandbox/: CMakeLists.txt
KaeruSandbox/src/: main.cpp
